<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lab3_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/Cezar"
                        style="@style/header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CezarSystem" />

                    <EditText
                        android:id="@+id/textForCezar"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextForEncrypt"
                        android:inputType="textMultiLine"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/koefForCezar"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/koeffForCezar"
                        android:inputType="text"
                        android:autofillHints="" />

                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights">

                        <Button
                            android:id="@+id/encryptCezar"
                            style="@style/Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Encrypt"
                            app:layout_gravity="left" />

                        <Button
                            android:id="@+id/decryptCezar"
                            style="@style/Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Decrypt"
                            app:layout_gravity="right" />
                    </androidx.gridlayout.widget.GridLayout>

                    <TextView
                        android:id="@+id/resCezar"
                        style="@style/results"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/Trifemus"
                    style="@style/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TrifemusSystem" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="A" />

                    <EditText
                        android:id="@+id/TextA"
                        style="@style/EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="2"
                        android:hint="@string/Digit"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="B" />

                    <EditText
                        android:id="@+id/TextB"
                        style="@style/EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="2"
                        android:hint="@string/Digit"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="C" />

                    <EditText
                        android:id="@+id/TextC"
                        style="@style/EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="2"
                        android:hint="@string/Digit"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/textForTrifemus"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextForEncrypt"
                        android:layout_marginTop="10dp"
                        android:inputType="textMultiLine" />
                </LinearLayout>

                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/encryptTrifemus"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Encrypt"
                        app:layout_gravity="left" />

                    <Button
                        android:id="@+id/decryptTrifemus"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Decrypt"
                        app:layout_gravity="right" />
                </androidx.gridlayout.widget.GridLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/resTrifemus"
                        style="@style/results"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                         android:id="@+id/Playfor"
                        style="@style/header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PlayforSystem" />

                    <EditText
                    android:id="@+id/textForPlayfor"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TextForEncrypt"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/wordForPlayfor"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codeWord"
                    android:inputType="text" />

                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <Button
                        android:id="@+id/encryptPlayfor"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Encrypt"
                        app:layout_gravity="left" />

                    <Button
                        android:id="@+id/decryptPlayfor"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Decrypt"
                        app:layout_gravity="right" />
                </androidx.gridlayout.widget.GridLayout>

                <TextView
                    android:id="@+id/resPlayfor"
                    style="@style/results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>