<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lab7_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rsa"
                        style="@style/header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DifiHellman" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal"
                        >

                        <TextView
                            style="@style/TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="1 открытый ключ(p):"
                            />

                        <EditText
                            android:id="@+id/pKey"
                            style="@style/EditText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center"
                            android:hint="большое простое число" />

                        <Button
                            android:id="@+id/pRand"
                            style="@style/Button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:text="@string/generate"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal"
                        >

                        <TextView
                            style="@style/TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="2 открытый ключ(g):"
                            />

                        <EditText
                            android:id="@+id/gKey"
                            style="@style/EditText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center"
                            android:hint="целое число меньше p" />

                        <Button
                            android:id="@+id/gRand"
                            style="@style/Button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:text="@string/generate"
                            />

                    </LinearLayout>



                        <Button
                            android:id="@+id/encryptDifi"
                            style="@style/Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/generate"
                            android:layout_marginBottom="15dp"
                            android:layout_gravity="center" />


                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="30dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/resS1"
                            style="@style/results"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1 результат"
                            app:layout_column="0"
                            app:layout_gravity="left"
                            app:layout_row="0" />

                        <TextView
                            android:id="@+id/resS2"
                            style="@style/results"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2 результат"
                            app:layout_gravity="right" />
                    </androidx.gridlayout.widget.GridLayout>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ElGam"
                        style="@style/header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/md5" />

                    <EditText
                        android:id="@+id/textForMD5"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextForEncrypt"
                        android:inputType="textMultiLine" />


                    <Button
                        android:id="@+id/encryptMD5"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Encrypt"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/resultMD5"
                        style="@style/results"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>